--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -254,7 +254,7 @@
                 const data = {
                     username: usernameSignup.value
                 };
-                fetch('http://localhost:3000/isLoginTrue',{
+                fetch('http://localhost:3000/isSignupTrue',{
                     method: 'post',
                     body: JSON.stringify(data),
                     headers: new Headers({
