--- a/src/resources/views/me/change_password.hbs
+++ b/src/resources/views/me/change_password.hbs
@@ -1,8 +1,10 @@
 <div class="grid">
     <div class="grid__row app__content">
-        <div class="grid__column-2">
+        <div class="grid__column-2 myInfo-nav-info">
             <h3>olegion2001</h3>
-            <a href=>Sửa hồ sơ</a>
+            <div>
+                <a href=>Sửa hồ sơ</a>
+            </div>
             <div>
                 <a href="">Tài khoản của tôi</a>   
             </div>
@@ -14,42 +16,43 @@
             </div>
         </div>
         
-        <div class="grid__column-10">
+        <div class="grid__column-10 myInfo-info">
             <h3>HỒ SƠ CỦA TÔI</h3>
             <h5>Quản lý thông tin hồ sơ để bảo mật tài khoản</h5>
             {{#with user}}
             <div class="form-group row" style="display: none">
-                <label for="staticEmail" class="col-sm-2 col-form-label">Mật khẩu cũ</label>
+                <label for="staticEmail" class="">Mật khẩu cũ</label>
                 <div class="col-sm-10">
-                <input type="password" class="form-control" id="old-password-value" value="{{password}}">
+                <input type="password" class="myInfo__change-info-input" id="old-password-value" value="{{password}}">
                 </div>
             </div>
             {{/with}}
-            <form action="" id="changePasswordForm" method="POST">
-            <div class="form-group row">
-                <label for="staticEmail" class="col-sm-2 col-form-label">Mật khẩu cũ</label>
-                <div class="col-sm-10">
-                <input type="password" class="form-control" id="old-password" value="" name="oldPassword">
-                <span class="warningInvalid"></span>
-                </div>
-            </div>
-
-            <div class="form-group row">
-                <label for="staticEmail" class="col-sm-2 col-form-label">Mật khẩu mới</label>
-                <div class="col-sm-10">
-                    <input type="password" class="form-control" value="" name="newPassword">
-                </div>
-            </div>
-
-            <div class="form-group row">
-                <label for="staticEmail" class="col-sm-2 col-form-label">Xác nhận mật khẩu mới</label>
-                <div class="col-sm-10">
-                    <input type="password" class="form-control" value="" name="newPasswordConfirm">
+            <form action="" id="changePasswordForm" method="POST" class="myInfo-change-box">
+                <div class="form-group row myInfo__change-info">
+                    <label for="staticEmail" class="col-sm-2 myInfo__change-info-label">Mật khẩu cũ</label>
+                    <div class="col-sm-10">
+                    <input type="password" class="myInfo__change-info-input" id="old-password" value="" name="oldPassword">
                     <span class="warningInvalid"></span>
+                    </div>
                 </div>
-            </div>
 
-            <button type="submit">
+                <div class="form-group row myInfo__change-info">
+                    <label for="staticEmail" class="col-sm-2 myInfo__change-info-label">Mật khẩu mới</label>
+                    <div class="col-sm-10">
+                        <input type="password" class="myInfo__change-info-input" value="" name="newPassword">
+                    </div>
+                </div>
+
+                <div class="form-group row myInfo__change-info">
+                    <label for="staticEmail" class="col-sm-2 myInfo__change-info-label">Xác nhận mật khẩu mới</label>
+                    <div class="col-sm-10">
+                        <input type="password" class="myInfo__change-info-input" value="" name="newPasswordConfirm">
+                    </div>
+                    
+                </div>
+                
+            <h3 class="warningInvalid"></h3>
+            <button class="btn btn--primary" type="submit">
                 Lưu
             </button>
             </form>
