--- a/src/resources/views/buying/purchase.hbs
+++ b/src/resources/views/buying/purchase.hbs
@@ -25,7 +25,7 @@
                 </div>
                 <button type="submit" class="home-filter__btn btn btn--primary">Mua Ngay</button>
             </form>
-            <form action="/me/admin/deleteProduct/{{productCode}}?_method=DELETE" method="POST">
+            <form action="/me/admin/deleteProduct/{{productCode}}?_method=DELETE" method="POST" class="deleteProductForm-ByAdmin" style="display: none">
                 <button type="submit" class="product-delete btn btn--primary">Xóa sản phẩm</button>
             </form>
         </div>
@@ -61,8 +61,18 @@
         const commentValue = formComment.querySelector('#input__comment');
         const submitButtonComment = formComment.querySelector('.btn-comment')
         const commentBox = document.querySelector('.comment-box');
+        const deleteProductForm_ByAdmin = document.querySelector('.deleteProductForm-ByAdmin');
         const socket = io();
-        console.log(formComment);   
+        console.log(formComment);  
+        const deleteForm = document.querySelector('.deleteProductForm');
+        console.log(deleteForm);
+        fetch('http://localhost:3000/isAdmin')
+            .then(res => res.json())
+            .then(isAdmin => {
+                if (isAdmin.isAdmin) {
+                    deleteProductForm_ByAdmin.style.display = 'block';
+                }
+            });
         fetch('http://localhost:3000/get_user')
             .then(res => res.json())
             .then(user => {
@@ -88,17 +98,25 @@
         
         socket.on('chatMessage', ({ msg, userInfo }) => {
             outputMessage(userInfo.name, msg);
+            commentValue.value = '';
         });
         function outputMessage(user, message) {
-            const span = document.createElement('span');
-            const p = document.createElement('p');
+            /*
+            <div class="comment-box-personal">
+                <img class="header__navbar-user-avatar" src="../assets/images/avatar.png"/>
+                <span>{{this.name}}</span>
+                <p>{{this.comment}}</p>
+            </div>
+            */
             const div = document.createElement('div');
+            div.classList.add('comment-box-personal');
+            const span = document.createElement('span');
+            span.innerText = user;
+            const p = document.createElement('p');
+            p.innerText = message;
             const img = document.createElement('img');
             img.classList.add('header__navbar-user-avatar');
             img.src = '../assets/images/avatar.png';
-            div.classList.add('comment-box-personal');
-            span.innerText = user;
-            p.innerText = message;
             div.appendChild(img);
             div.appendChild(span);
             div.appendChild(p);
@@ -122,5 +140,6 @@
                 formSubmitProduct.submit();
             }
         }
+
     })
 </script>
