--- a/src/resources/views/me/productInfo.hbs
+++ b/src/resources/views/me/productInfo.hbs
@@ -1,77 +1,90 @@
 <div class="grid">
     <div class="grid__row app__content">
-        <div class="grid__column-2">
+        <div class="grid__column-2 myInfo-nav-info">
             <h3>olegion2001</h3>
-            <a href=>Sửa hồ sơ</a>
             <div>
-                <a href="">Tài khoản của tôi</a>
+                <a href=>Sửa hồ sơ</a>
             </div>
             <div>
-                <a href="">Hồ sơ</a>   
+                <a href="">Tài khoản của tôi</a>   
             </div>
             <div>
-                <a href="">Đổi mật khẩu</a>   
+                <a href="/me/change_password_site">Đổi mật khẩu</a>   
             </div>
             <div>
-                <a href="">Đơn mua</a>   
-            </div>
-            <div>
-                <a href="">Thông báo</a>
+                <a href="/me/order">Đơn mua</a>   
             </div>
         </div>
         
         <div class="grid__column-10">
-            
             {{#with product}}
             <form action="/me/delete/product/{{productCode}}?_method=DELETE" class="deleteProductForm" method="POST">
-                <button class="btn btn-primary btn-delete-product">Xóa sản phẩm</button>
+                <button class="btn btn--primary btn-delete-product">Xóa sản phẩm</button>
             </form>
             <form class="formSell product-save-form" action="/me/edit/{{productCode}}?_method=PATCH" method="POST">
                 <div class="form-group">
-                    <label for="productName">Mã sản phẩm</label>
-                    <input type="text" class="form-control" disabled name="productCode" value="{{productCode}}">
+                    <label for="productName" class="col-sm-2 myInfo__change-info-label">Mã sản phẩm</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="myInfo__change-info-input" disabled name="productCode" value="{{productCode}}">
+                    </div>
+                <div class="form-group">
+                    <label for="productName" class="col-sm-2 myInfo__change-info-label">Tên sản phẩm</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="myInfo__change-info-input" name="productName" value="{{productName}}">
+                    </div>
                 
                 <div class="form-group">
-                    <label for="productName">Tên sản phẩm</label>
-                    <input type="text" class="form-control" name="productName" value="{{productName}}">
-                <div class="col-auto my-1">
-                    <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Chọn dòng sản phẩm</label>
-                    <select class="custom-select mr-sm-2" name="productline">
-                        <option value="{{productline}}">{{productline}}</option>
-                        <option value="Áo">Áo</option>
-                        <option value="Điện Thoại">Điện thoại</option>
-                        <option value="Đồng Hồ">Đồng hồ</option>
-                        <option value="Giầy, dép">Giầy, dép</option>
-                        <option value="Mũ">Mũ</option>
-                        <option value="Phụ Kiện">Phụ kiện</option>
-                        <option value="Quần">Quần</option>
-                        <option value="Túi Xách">Túi xách</option>
-                    </select>
+                    <label class="col-sm-2 myInfo__change-info-label">Chọn dòng sản phẩm</label>
+                    <div class="col-sm-10">
+                        <select class="post-product-productline" name="productline" required>
+                            <option selected value="Áo">Áo</option>
+                            <option value="Điện Thoại">Điện thoại</option>
+                            <option value="Đồng Hồ">Đồng hồ</option>
+                            <option value="Giầy, dép">Giầy, dép</option>
+                            <option value="Mũ">Mũ</option>
+                            <option value="Phụ Kiện">Phụ kiện</option>
+                            <option value="Quần">Quần</option>
+                            <option value="Túi Xách">Túi xách</option>
+                        </select>
+                    </div>
+                </div>
+                
+                <div class="form-group">
+                    <label for="quantityInStock" class="col-sm-2 myInfo__change-info-label">Số lượng hiện có</label>
+                    <div class="col-sm-10">
+                        <input type="number" class="myInfo__change-info-input" name="quantityInStock" value="{{quantityInStock}}">
+                    </div>
                 </div>
                 <div class="form-group">
-                    <label for="quantityInStock">Số lượng hiện có</label>
-                    <input type="number" class="form-control" name="quantityInStock" value="{{quantityInStock}}">
+                    <label for="buyPrice" class="col-sm-2 myInfo__change-info-label">Giá bán</label>
+                    <div class="col-sm-10">
+                        <input type="number" class="myInfo__change-info-input" name="buyPrice" value="{{buyPrice}}">
+                    </div>
                 </div>
                 <div class="form-group">
-                    <label for="buyPrice">Giá bán</label>
-                    <input type="number" class="form-control" name="buyPrice" value="{{buyPrice}}">
+                    <label for="image" class="col-sm-2 myInfo__change-info-label">Ảnh</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="myInfo__change-info-input" name="image" value="{{image}}">
+                    </div>
                 </div>
                 <div class="form-group">
-                    <label for="image">Ảnh</label>
-                    <input type="text" class="form-control" name="image" value="{{image}}">
+                    <label for="origin" class="col-sm-2 myInfo__change-info-label">Xuất xứ</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="myInfo__change-info-input" name="origin" value="{{origin}}">
+                    </div>
                 </div>
                 <div class="form-group">
-                    <label for="origin">Xuất xứ</label>
-                    <input type="text" class="form-control" name="origin" value="{{origin}}">
+                    <label for="discount" class="col-sm-2 myInfo__change-info-label">Giảm giá</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="myInfo__change-info-input" name="discount" value="{{discount}}">
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label for="discount">Giảm giá</label>
-                    <input type="text" class="form-control" name="discount" value="{{discount}}">
-                </div>
-                <button type="submit" class="btn btn-primary">Lưu</button>
+                <button type="submit" class="btn btn--primary">Lưu</button>
             </form>
             {{/with}}
         </div>
     </div>
 </div>
+
+
 
